# AndroidCVDemo

./: README.md  config
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/openailab/posetrack/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/dssttrack/: CMakeLists.txt  fhog.cpp  kcftracker.cpp  kcftracker.hpp  runtracker.cpp
app/src/main/cpp/handdetect/: CMakeLists.txt  gesture.cpp  gesture.hpp
app/src/main/cpp/include/conf/: com_openailab_speechrecognition_SpeechRecognitionJNI.h
app/src/main/java/com/openailab/posetrack/: MainActivity.java  PermissionsDelegate.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/openailab/posetrack/: ExampleUnitTest.java
